# tickets-rs

./: .gitignore  Cargo.toml  README.md  latest.ron  main.rs
adapters/: Cargo.toml
adapters/src/: lib.rs
adapters/src/github_ticket_adapter/: adapter.rs  mod.rs
adapters/src/local_ticket_adapter/: adapter.rs  interpreter.rs  interpreter_errors.rs  interpreter_instructions.rs  interpreter_parameters.rs  interpreter_tests.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/adapter_base/: adapter_error.rs  mod.rs  ticket_adapter.rs
core/src/data_model/: bucket.rs  bucket_panel_location.rs  data_model_tests.rs  filter.rs  local_database.rs  mod.rs  state.rs  tag.rs  ticket.rs
core/src/data_model/config/: app_config.rs  config_base.rs  config_option.rs  mod.rs
core/src/ticket_provider/: mod.rs
ui/: Cargo.toml
ui/src/: helper.rs  lib.rs  ui_cache.rs  ui_controller.rs  ui_theme.rs
ui/src/overlays/: helper.rs  mod.rs  overlay_about.rs  overlay_adapter.rs  overlay_bucket.rs  overlay_filter.rs  overlay_preferences.rs  overlay_state.rs  overlay_tag.rs  overlay_ticket.rs  overlay_wizard.rs
ui/src/user_interface/: menu_bar.rs  mod.rs  side_panel.rs  ticket.rs
