[package]
name = "tickets-rs-ui"
version = "0.1.0"
authors = ["Robert Lang"]
edition = "2021"
description = "This crate contains all UI related things for tickets-rs, made with iced"

[dependencies]
tickets-rs-core = { version = "0.1", path = "../core" }

egui = { version = "0.19.0", features = ["color-hex"] } 
egui_commonmark = "0.4.0"
eframe = "0.19.0"
chrono = "0.4.22"
timer = "0.2.0"
png = "0.17.6"